# fraud-proof-compiler

./: Cargo.toml  README.md
src/: cleanup.rs  code_cleanup.rs  final_emit.rs  integration_test.rs  lib.rs  op_return_true_to_op_if_return_true.rs  op_success_to_op_if_success.rs  reduce.rs  structured_script.rs  taint.rs
